micro-frontend-behind-ingress/stack.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/instance: main
    app.kubernetes.io/name: main
  name: main
  namespace: default
spec:
  containers:
  - name: common
    image: nginx:1.21.6-alpine
    imagePullPolicy: IfNotPresent
    volumeMounts:
      - name: nginx-index-file
        mountPath: /usr/share/nginx/html/
      - name: nginx-conf
        mountPath: /etc/nginx/nginx.conf
        subPath: nginx.conf
        readOnly: true
  volumes:
  - name: nginx-index-file
    configMap:
      name: index-html-configmap-main
  - name: nginx-conf
    configMap:
      name: nginx-main
      items:
        - key: nginx.conf
          path: nginx.conf
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/instance: alpha
    app.kubernetes.io/name: alpha
  name: alpha
  namespace: default
spec:
  containers:
  - name: common
    image: nginx:1.21.6-alpine
    imagePullPolicy: IfNotPresent
    volumeMounts:
      - name: nginx-index-file
        mountPath: /usr/share/nginx/html/
  volumes:
  - name: nginx-index-file
    configMap:
      name: index-html-configmap-alpha
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/instance: beta
    app.kubernetes.io/name: beta
  name: beta
  namespace: default
spec:
  containers:
  - name: common
    image: nginx:1.21.6-alpine
    imagePullPolicy: IfNotPresent
    volumeMounts:
      - name: nginx-index-file
        mountPath: /usr/share/nginx/html/
  volumes:
  - name: nginx-index-file
    configMap:
      name: index-html-configmap-beta
  restartPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: alpha
    app.kubernetes.io/name: alpha
  name: alpha
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: alpha
    app.kubernetes.io/name: alpha
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: beta
    app.kubernetes.io/name: beta
  name: beta
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: beta
    app.kubernetes.io/name: beta
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: main
    app.kubernetes.io/name: main
  name: main
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: main
    app.kubernetes.io/name: main
  type: ClusterIP
